--- a/app.heytulip.in/css/main.css
+++ b/app.heytulip.in/css/main.css
@@ -82,7 +82,7 @@ h2.active {
 
 /* FORM TYPOGRAPHY*/
 
-input[type=button], input[type=submit], input[type=reset]  {
+input[type=button], button, input[type=reset]  {
   background-color: #212529;
   border: none;
   color: white;
@@ -104,11 +104,11 @@ input[type=button], input[type=submit], input[type=reset]  {
   transition: all 0.3s ease-in-out;
 }
 
-input[type=button]:hover, input[type=submit]:hover, input[type=reset]:hover  {
+input[type=button]:hover, button, input[type=reset]:hover  {
   background-color: #212529;
 }
 
-input[type=button]:active, input[type=submit]:active, input[type=reset]:active  {
+input[type=button]:active, button, input[type=reset]:active  {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
   -o-transform: scale(0.95);
